[gd_scene load_steps=20 format=3 uid="uid://bshtf4010nudp"]

[ext_resource type="Script" path="res://scripts/base_scene.gd" id="1_prqau"]
[ext_resource type="Texture2D" uid="uid://rjxv2x5cf1tk" path="res://assets/maps/Buildings.png" id="2_orvui"]
[ext_resource type="Texture2D" uid="uid://cbamgwvxtikj8" path="res://assets/maps/cave_scenary.png" id="3_aiusl"]
[ext_resource type="Texture2D" uid="uid://6xcfn4hptbqe" path="res://assets/maps/ocean_scenary.png" id="4_dwurk"]
[ext_resource type="Texture2D" uid="uid://cbb1bimtuklr" path="res://assets/maps/forest_scenary.png" id="5_2xl7w"]
[ext_resource type="Texture2D" uid="uid://b1rk1o1d5wpij" path="res://assets/maps/underworld_scenary.png" id="6_flq17"]
[ext_resource type="Texture2D" uid="uid://bkb27d0shut10" path="res://assets/maps/Npcs.png" id="7_o3b4b"]
[ext_resource type="PackedScene" uid="uid://dmvgiymg50ggf" path="res://Scenes/scene_trigger.tscn" id="8_xobhe"]
[ext_resource type="PackedScene" uid="uid://cpl6kp31vi14a" path="res://Scenes/player.tscn" id="10_6fiug"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="11_wonb4"]
[ext_resource type="PackedScene" uid="uid://dljpgb37klbwg" path="res://Scenes/menu.tscn" id="12_u18qy"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qxddf"]
texture = ExtResource("2_orvui")
texture_region_size = Vector2i(64, 64)
0:3/size_in_atlas = Vector2i(3, 3)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-83.4386, -84.8528, 82.0244, -84.8528, 76.3675, 89.0955, -77.7818, 89.0955)
0:0/size_in_atlas = Vector2i(3, 3)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-83.4386, -84.8528, 82.0244, -84.8528, 76.3675, 89.0955, -77.7818, 89.0955)
3:2/size_in_atlas = Vector2i(7, 4)
3:2/0 = 0
3:2/0/texture_origin = Vector2i(32, 32)
3:2/0/y_sort_origin = 64
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-232.108, -119.324, 160.16, -119.855, 160.532, -35.5345, 140.184, -35.8857, 141.952, 79.7263, 15.2028, 78.8424, 12.3744, -11.6673, -85.9135, -10.253, -85.2064, 79.5495, -202.409, 78.6656, -204.531, -36.2392, -216.198, -37.2999, -216.198, -99.8788, -232.108, -101.647)
10:0/size_in_atlas = Vector2i(3, 3)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-86, -84, 92, -86, 85, 89, -84, 89)
10:3/size_in_atlas = Vector2i(3, 3)
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-86, -84, 92, -86, 85, 89, -84, 89)
13:1/size_in_atlas = Vector2i(7, 5)
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-211.023, -143.675, 215.513, -143.675, 213.268, 148.165, -204.288, 152.655)
20:0/size_in_atlas = Vector2i(3, 3)
20:0/0 = 0
20:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-86, -84, 92, -86, 85, 89, -84, 89)
20:3/size_in_atlas = Vector2i(3, 3)
20:3/0 = 0
20:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-86, -84, 92, -86, 85, 89, -84, 89)
23:1/size_in_atlas = Vector2i(7, 5)
23:1/0 = 0
23:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-211.023, -143.675, 215.513, -143.675, 213.268, 148.165, -204.288, 152.655)
0:6/size_in_atlas = Vector2i(5, 8)
0:6/0 = 0
5:6/size_in_atlas = Vector2i(3, 5)
5:6/0 = 0
14:12/size_in_atlas = Vector2i(6, 3)
14:12/0 = 0
10:6/size_in_atlas = Vector2i(6, 6)
10:6/0 = 0
20:6/size_in_atlas = Vector2i(6, 6)
20:6/0 = 0
26:6/size_in_atlas = Vector2i(3, 4)
26:6/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_15wsg"]
texture = ExtResource("3_aiusl")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 8, 32, 9, 32, 32, -32, 32)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(15.5, 11.5, 32, 10.5, 32, 32, 15.5, 32)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(16.5, -32, 32, -32, 32, 32, 17, 32)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
8:1/0 = 0
9:1/0 = 0
9:0/0 = 0
3:1/0 = 0
1:1/0 = 0
0:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 8.5, 32, 8, 32, 32, -32, 32)
1:2/0 = 0
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 10, -12.5, 10, -12, 32, -32, 32)
8:2/0 = 0
9:2/0 = 0
9:3/0 = 0
8:3/0 = 0
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, -15, -32, -15, 32, -32, 32)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(16.5, -32, 32, -32, 32, 32, 17, 32)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, -14.5, -32, -14.5, 32, -32, 32)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, -15, -32, -15, 32, -32, 32)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
8:4/0 = 0
9:4/0 = 0
9:5/0 = 0
9:6/0 = 0
8:6/0 = 0
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, -14.5, -32, -14, -10, -32, -11)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, -15.5, -32, -15.5)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(13, -32, 32, -32, 32, 32, 13.5, 32)
4:5/0 = 0
8:5/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
9:8/0 = 0
8:8/0 = 0
7:8/0 = 0
6:8/0 = 0
5:8/0 = 0
4:8/0 = 0
4:6/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(14.5, -32, 32, -32, 32, -10.5, 14.5, -9)
0:5/size_in_atlas = Vector2i(2, 2)
0:5/0 = 0
3:5/size_in_atlas = Vector2i(1, 2)
3:5/0 = 0
0:7/size_in_atlas = Vector2i(2, 2)
0:7/0 = 0
2:7/size_in_atlas = Vector2i(2, 2)
2:7/0 = 0
0:2/size_in_atlas = Vector2i(1, 2)
0:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_k7iyg"]
texture = ExtResource("4_dwurk")
texture_region_size = Vector2i(64, 64)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-27.125, -27.125, -18.625, -29.875, 32, -32, -32, -32, -32, 32, -29.875, -19.625)
2:2/0 = 0
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(27.125, -27.125, 18.625, -29.875, -32, -32, 32, -32, 32, 32, 29.875, -19.625)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, -32, -32, 32, -32, 32, -8.30851, 13.875, -7.875, 13.375, 32)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, -7.625, -32, -8.125, -32, -32)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, 32, -32, -32, -32, -32, -8.30851, -13.875, -7.875, -13.375, 32)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, -32, -32, -32, -32, -32, 32)
2:3/0 = 0
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, 32, 32, -32, 32, -32, 32, 32)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(11.125, 32, 11.875, -32, -32, -32, -32, 32)
7:3/0 = 0
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-11.125, 32, -11.875, -32, 32, -32, 32, 32)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-27.125, 27.125, -18.625, 29.875, 32, 32, -32, 32, -32, -32, -29.875, 19.625)
2:4/0 = 0
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(27.125, 27.125, 18.625, 29.875, -32, 32, 32, 32, 32, -32, 29.875, 19.625)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, -32, 32, 32, 32, 32, 8.30851, 13.875, 7.875, 13.375, -32)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, 32, -32, 7.625, 32, 8.125, 32, 32)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, 8.30851, -13.875, 7.875, -13.375, -32)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(32, -32, 32, 32, -32, 32, -32, -32)
5:5/0 = 0
0:0/size_in_atlas = Vector2i(1, 2)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(31.7096, -64.261, 31.1483, 63.1385, -31.7095, 63.6997, -33.3932, -64.8222)
3:6/0 = 0
3:7/0 = 0
3:8/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7tmaa"]
texture = ExtResource("5_2xl7w")
texture_region_size = Vector2i(64, 64)
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:0/size_in_atlas = Vector2i(1, 2)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sbbgq"]
texture = ExtResource("6_flq17")
texture_region_size = Vector2i(64, 64)
7:1/0 = 0
8:1/0 = 0
0:0/size_in_atlas = Vector2i(1, 2)
0:0/0 = 0
1:0/size_in_atlas = Vector2i(1, 2)
1:0/0 = 0
2:0/size_in_atlas = Vector2i(1, 2)
2:0/0 = 0
0:2/size_in_atlas = Vector2i(1, 2)
0:2/0 = 0
1:2/size_in_atlas = Vector2i(1, 2)
1:2/0 = 0
2:2/size_in_atlas = Vector2i(1, 2)
2:2/0 = 0
0:4/size_in_atlas = Vector2i(1, 2)
0:4/0 = 0
1:4/size_in_atlas = Vector2i(1, 2)
1:4/0 = 0
2:4/size_in_atlas = Vector2i(1, 2)
2:4/0 = 0
4:0/size_in_atlas = Vector2i(1, 2)
4:0/0 = 0
5:0/size_in_atlas = Vector2i(1, 2)
5:0/0 = 0
6:0/size_in_atlas = Vector2i(1, 2)
6:0/0 = 0
4:2/size_in_atlas = Vector2i(1, 2)
4:2/0 = 0
4:4/0 = 0
4:5/size_in_atlas = Vector2i(1, 2)
4:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0kbm4"]
texture = ExtResource("7_o3b4b")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:1/0 = 0

[sub_resource type="TileSet" id="TileSet_gh57o"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_15wsg")
sources/0 = SubResource("TileSetAtlasSource_qxddf")
sources/2 = SubResource("TileSetAtlasSource_k7iyg")
sources/4 = SubResource("TileSetAtlasSource_7tmaa")
sources/5 = SubResource("TileSetAtlasSource_sbbgq")
sources/6 = SubResource("TileSetAtlasSource_0kbm4")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l410a"]
size = Vector2(86, 16)

[node name="InsideHouse" type="Node2D"]
script = ExtResource("1_prqau")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_gh57o")
format = 2
layer_0/name = "Backgroud"
layer_0/tile_data = PackedInt32Array(0, 1, 0, 65536, 1, 0, 131072, 1, 0, 196608, 1, 0, 262144, 1, 0, 327680, 1, 0, 1, 1, 0, 65537, 1, 0, 131073, 1, 0, 196609, 1, 0, 262145, 1, 0, 327681, 1, 0, 2, 1, 0, 65538, 1, 0, 131074, 1, 0, 196610, 1, 0, 262146, 1, 0, 327682, 1, 0, 3, 1, 0, 65539, 1, 0, 327683, 1, 0, 4, 1, 0, 65540, 1, 0, 327684, 1, 0, 5, 1, 0, 65541, 1, 0, 327685, 1, 0, 6, 1, 0, 65542, 1, 0, 131078, 1, 0, 196614, 1, 0, 262150, 1, 0, 327686, 1, 0, 7, 1, 0, 65543, 1, 0, 131079, 1, 0, 196615, 1, 0, 262151, 1, 0, 327687, 1, 0, 8, 1, 0, 65544, 1, 0, 131080, 1, 0, 196616, 1, 0, 262152, 1, 0, 327688, 1, 0, 9, 1, 0, 65545, 1, 0, 131081, 1, 0, 196617, 1, 0, 262153, 1, 0, 327689, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 196611, 131074, 3, 196612, 131074, 3, 196613, 131074, 3, 131077, 131074, 3, 131076, 131074, 3, 131075, 131074, 3)
layer_1/name = "Rocks"
layer_1/y_sort_enabled = true
layer_2/name = "Horizonal Walls"
layer_2/tile_data = PackedInt32Array(-65536, 393217, 4, 0, 393217, 5, 65536, 393217, 6, -65535, 393217, 4, 1, 393217, 5, 65537, 393217, 6, -65534, 393217, 4, 2, 393217, 5, 65538, 393217, 6, -65533, 393217, 4, 3, 393217, 5, 65539, 393217, 6, -65532, 393217, 4, 4, 393217, 5, 65540, 393217, 6, -65531, 393217, 4, 5, 393217, 5, 65541, 393217, 6, -65530, 393217, 4, 6, 393217, 5, 65542, 393217, 6, -65529, 393217, 4, 7, 393217, 5, 65543, 393217, 6, -65528, 393217, 4, 8, 393217, 5, 65544, 393217, 6, -65527, 393217, 4, 9, 393217, 5, 65545, 393217, 6, 327680, 393217, 2, 327681, 393217, 2, 327682, 393217, 2, 327683, 393217, 2, 327684, 393217, 2, 327685, 458753, 2, 327686, 327681, 2, 327687, 393217, 2, 327688, 393217, 2, 327689, 393217, 2)
layer_3/name = "Vertical Walls"
layer_3/tile_data = PackedInt32Array(9, 458753, 268435459, 65545, 458753, 268435459, 131081, 458753, 268435459, 196617, 458753, 268435459, 262153, 458753, 268435459, 327689, 524289, 1, -65527, 458753, 268435458, 327680, 458753, 1, 262144, 458753, 3, 196608, 458753, 3, 131072, 458753, 3, 65536, 458753, 3, 0, 458753, 3, -65536, 458753, 2, 5, 458753, 5, 65541, 458753, 6, 8, 458753, 5, 65544, 458753, 6, 2, 458753, 5, 65538, 458753, 6, -65534, 524289, 4, -65531, 524289, 4, -65528, 524289, 4)
layer_4/name = "Objects"
layer_4/tile_data = PackedInt32Array(65537, 1, 5, 65544, 131073, 7, 65543, 196609, 5, 196609, 65537, 4, 262146, 1, 4)
layer_5/name = "Houses"
layer_5/y_sort_enabled = true
layer_6/name = "Carts"

[node name="EntranceMarkers" type="Node2D" parent="."]

[node name="any" type="Marker2D" parent="EntranceMarkers"]
position = Vector2(426, 336)

[node name="SceneTrigger" parent="." instance=ExtResource("8_xobhe")]
light_mask = 1
visibility_layer = 1
position = Vector2(388, 376)
connected_scene = "game"

[node name="CollisionShape2D" type="CollisionShape2D" parent="SceneTrigger"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_l410a")

[node name="Player" parent="." instance=ExtResource("10_6fiug")]
position = Vector2(460, 288)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Pause Menu" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("11_wonb4")

[node name="Menu" parent="Pause Menu" instance=ExtResource("12_u18qy")]
offset_right = 0.0
offset_bottom = 0.0
metadata/_edit_use_anchors_ = true

[connection signal="closed" from="Pause Menu/Menu" to="." method="_on_menu_closed"]
[connection signal="opened" from="Pause Menu/Menu" to="." method="_on_menu_opened"]
